[gd_scene load_steps=6 format=3 uid="uid://b25becxymidw0"]

[ext_resource type="Script" path="res://Scripts/health_powerup.gd" id="1_45eti"]
[ext_resource type="Texture2D" uid="uid://dk12vk50ovx6j" path="res://Assets/Art/Powerups/Health.png" id="2_sidhb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ushds"]
radius = 181.84

[sub_resource type="Animation" id="Animation_ositd"]
resource_name = "Idle"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 50), Vector2(0, -50), Vector2(0, 50)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ayqd6"]
_data = {
"Idle": SubResource("Animation_ositd")
}

[node name="Health_Powerup" type="Area2D"]
scale = Vector2(0.1, 0.1)
script = ExtResource("1_45eti")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ushds")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 50)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_sidhb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
speed_scale = 2.0
libraries = {
"": SubResource("AnimationLibrary_ayqd6")
}

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
